ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    # This tells Google Cloud to create an External Load Balancer to realize this Ingress
    kubernetes.io/ingress.class: gce
    # This enables HTTP connections from Internet clients
    # Since "true" is the default, does not need to be set.
    kubernetes.io/ingress.allow-http: "true"
    # This tells Google Cloud to associate the External Load Balancer with the static IP which we created earlier
    kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/cluster-issuer: kubeissuer
    # networking.gke.io/managed-certificates: "nginx-tls"
spec:
  tls:
  - hosts:
    - gke.ioinfo.shop
    secretName: demo
  
  rules:
  - host: gke.ioinfo.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
